chore: update Docker configuration for development and adjust task error messages

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,5 +23,5 @@
     CMD ["node", "dist/server.js"]
 
 
-# docker-compose -f docker-compose.prod.yml up --build -d
+# docker-compose -f docker-compose.yml up --build -d
     
