--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -10,9 +10,11 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
+      - /app/node_modules
     environment:
       NODE_ENV: development
       DATABASE_URL: postgres://postgres:postgres@db:5432/devdb
+    command: npm run dev
     depends_on:
       - db
 
@@ -27,10 +29,7 @@ services:
       - "5432:5432"
     volumes:
       - pg_dev_data:/var/lib/postgresql/data
-    deploy:
-      resources:
-        limits:
-          memory: 512M
+    mem_limit: 512m
     command: >
       postgres
       -c shared_buffers=128MB
