--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -12,8 +12,8 @@ services:
       - .:/app
       - /app/node_modules
     environment:
-      NODE_ENV: development
-      DATABASE_URL: postgres://postgres:postgres@db:5432/devdb
+      NODE_ENV: ${NODE_ENV}
+      DATABASE_URL: ${DATABASE_URL}
     command: npm run dev
     depends_on:
       - db
@@ -22,11 +22,11 @@ services:
     image: postgres:16-alpine
     container_name: postgres_dev
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: devdb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - pg_dev_data:/var/lib/postgresql/data
     mem_limit: 512m
