chore: update Docker configuration for development, set environment variables, and adjust Prisma client setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,8 +8,7 @@
     
     COPY . .
 
-    # # Generate Prisma client for build
-    # RUN npx prisma generate
+    RUN npx prisma generate
 
     RUN npm run build
 
@@ -22,9 +21,8 @@
     COPY package*.json ./
     RUN npm ci --omit=dev
 
-    # # Copy Prisma client and schema if needed at runtime
-    # COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
-    # COPY --from=builder /app/prisma ./prisma
+    COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+    COPY --from=builder /app/prisma ./prisma
     
     EXPOSE 3000
     
@@ -34,11 +32,6 @@
 # docker-compose -f docker-compose.yml up --build -d
 
 #----------Prisma Running Migrations-----------------
-
-# In dev:
-
-# docker-compose exec api npx prisma migrate dev --name init
-
 
 # In prod:
 
