--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -13,3 +13,15 @@ CMD ["npm", "run", "dev"]
 
 
 # docker-compose -f docker-compose.dev.yml up --build
+
+#----------Prisma Running Migrations-----------------
+
+# In dev:
+
+# docker-compose exec api npx prisma migrate dev --name init
+
+#---------Docker prisma generate--------------------
+# docker-compose exec api npx prisma generate
+
+#---------Docker prisma migrate--------------------
+# docker-compose exec api npx prisma migrate dev --name add_user_model
