--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -29,7 +29,7 @@
     CMD ["node", "dist/server.js"]
 
 
-# docker-compose -f docker-compose.yml up --build -d
+# docker-compose -f docker-compose.prod.yml up --build -d
 
 #----------Prisma Running Migrations-----------------
 
