--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     container_name: express_prod
     ports:
       - "3000:3000"
