--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,18 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
-    "docker:down": "docker-compose down",
-    "docker:build": "docker-compose up -d --build",
-    "docker:restart": "docker-compose down && docker-compose up -d --build",
+    "docker:down": "docker-compose -f docker-compose.dev.yml down",
+    "docker:build": "docker-compose -f docker-compose.dev.yml up -d --build",
+    "docker:dev:restart": "docker-compose -f docker-compose.dev.yml down && docker-compose -f docker-compose.dev.yml up -d --build",
     "dev:up": "docker-compose -f docker-compose.dev.yml up -d --build",
-    "dev:migrate": "docker-compose exec api npx prisma migrate dev",
-    "dev:studio": "docker-compose exec api npx prisma studio --browser none",
-    "dev:generate": "docker-compose exec api npx prisma generate",
+    "dev:migrate": "docker-compose -f docker-compose.dev.yml exec api npx prisma migrate dev",
+    "dev:studio": "docker-compose -f docker-compose.dev.yml exec api npx prisma studio --browser none",
+    "dev:generate": "docker-compose -f docker-compose.dev.yml exec api npx prisma generate",
     "prod:up": "docker-compose -f docker-compose.prod.yml up -d --build",
-    "prod:migrate": "docker-compose exec api npx prisma migrate deploy",
-    "prisma:migrate": "docker-compose exec api npx prisma migrate dev",
-    "prisma:generate": "docker-compose exec api npx prisma generate",
-    "prisma:studio": "docker-compose exec api npx prisma studio --browser none"
+    "prod:migrate": "docker-compose -f docker-compose.prod.yml exec api npx prisma migrate deploy",
+    "prisma:migrate": "docker-compose -f docker-compose.dev.yml exec api npx prisma migrate dev",
+    "prisma:generate": "docker-compose -f docker-compose.dev.yml exec api npx prisma generate",
+    "prisma:studio": "docker-compose -f docker-compose.prod.yml exec api npx prisma studio --browser none"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
