--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm config set registry https://registry.npmjs.org/ && npm install
 
 COPY . .
 
