--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -25,4 +25,5 @@ CMD ["npm", "run", "dev"]
 
 #---------Docker prisma migrate--------------------
 # docker-compose exec api npx prisma migrate dev --name add_user_model
-#npm run prisma:migrate -- --name add_user_model
+#npm run dev:migrate -- --name add_refresh_tokens
+
