chore: update Docker commands in package.json, enhance README with Docker management instructions, and modify authentication middleware to include expiration date in user profile

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
-    "docker:down": "docker-compose -f docker-compose.dev.yml down",
-    "docker:build": "docker-compose -f docker-compose.dev.yml up -d --build",
+    "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
+    "docker:dev:build": "docker-compose -f docker-compose.dev.yml up -d --build",
     "docker:dev:restart": "docker-compose -f docker-compose.dev.yml down && docker-compose -f docker-compose.dev.yml up -d --build",
     "dev:up": "docker-compose -f docker-compose.dev.yml up -d --build",
     "dev:migrate": "docker-compose -f docker-compose.dev.yml exec api npx prisma migrate dev",
