--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
@@ -16,13 +16,16 @@
     "docker:dev:restart": "docker-compose -f docker-compose.dev.yml down && docker-compose -f docker-compose.dev.yml up -d --build",
     "dev:up": "docker-compose -f docker-compose.dev.yml up -d --build",
     "dev:migrate": "docker-compose -f docker-compose.dev.yml exec api npx prisma migrate dev",
-    "dev:studio": "docker-compose -f docker-compose.dev.yml exec api npx prisma studio --browser none",
     "dev:generate": "docker-compose -f docker-compose.dev.yml exec api npx prisma generate",
+    "dev:studio": "docker-compose -f docker-compose.dev.yml exec api npx prisma studio --browser none",
     "prod:up": "docker-compose -f docker-compose.prod.yml up -d --build",
     "prod:migrate": "docker-compose -f docker-compose.prod.yml exec api npx prisma migrate deploy",
     "prisma:migrate": "docker-compose -f docker-compose.dev.yml exec api npx prisma migrate dev",
     "prisma:generate": "docker-compose -f docker-compose.dev.yml exec api npx prisma generate",
-    "prisma:studio": "docker-compose -f docker-compose.prod.yml exec api npx prisma studio --browser none"
+    "prisma:studio": "docker-compose -f docker-compose.prod.yml exec api npx prisma studio --browser none",
+    "docker:clean": "docker image prune && docker network prune && docker volume prune && docker builder prune -a",
+    "docker:clean:safe": "docker image prune -f && docker network prune -f && docker builder prune -f",
+    "docker:clean:all": "docker image prune -a -f && docker network prune -f && docker volume prune -f && docker builder prune -a -f"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
@@ -41,11 +44,16 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.3",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prisma": "^7.2.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
