--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY package*.json ./
 RUN npm config set registry https://registry.npmjs.org/ && npm install
+RUN apk add --no-cache postgresql-client
 
 COPY . .
 
