--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
+    "test": "NODE_ENV=test jest --runInBand",
+    "test:docker": "docker compose -f docker-compose.test.yml up -d && cross-env NODE_ENV=test npx prisma db push && cross-env NODE_ENV=test jest --runInBand && docker compose -f docker-compose.test.yml down -v",
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
@@ -48,9 +49,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^10.1.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
+    "pg-mem": "^3.0.5",
     "prisma": "^7.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
