--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -13,13 +13,22 @@ services:
       - "51212:51212"
     volumes:
       - .:/app
-      - /app/node_modules
+      # - /app/node_modules
+      - node_modules:/app/node_modules
     environment:
       NODE_ENV: ${NODE_ENV}
       DATABASE_URL: ${DATABASE_URL}
+      REDIS_URL: ${REDIS_URL}
     command: npm run dev
     depends_on:
       - db
+      - redis
+
+  redis:
+    image: redis:8-alpine
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--save", "", "--appendonly", "no"]
 
   db:
     image: postgres:16-alpine
@@ -43,3 +52,4 @@ services:
 
 volumes:
   pg_dev_data:
+  node_modules:
