--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -11,10 +11,20 @@ services:
     ports:
       - "3000:3000"
       - "51212:51212"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:3000/health",
+        ]
     volumes:
       - .:/app
-      # - /app/node_modules
-      - node_modules:/app/node_modules
+      - /app/node_modules
+      # - node_modules:/app/node_modules
     environment:
       NODE_ENV: ${NODE_ENV}
       DATABASE_URL: ${DATABASE_URL}
@@ -29,6 +39,8 @@ services:
     ports:
       - "6379:6379"
     command: ["redis-server", "--save", "", "--appendonly", "no"]
+    volumes:
+      - redis_dev_data:/data
 
   db:
     image: postgres:16-alpine
@@ -52,4 +64,5 @@ services:
 
 volumes:
   pg_dev_data:
+  redis_dev_data:
   node_modules:
