--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -25,10 +25,6 @@ services:
       - .:/app
       - /app/node_modules
       # - node_modules:/app/node_modules
-    environment:
-      NODE_ENV: ${NODE_ENV}
-      DATABASE_URL: ${DATABASE_URL}
-      REDIS_URL: ${REDIS_URL}
     command: npm run dev
     depends_on:
       - db
@@ -45,10 +41,8 @@ services:
   db:
     image: postgres:16-alpine
     container_name: postgres_dev
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
