--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -8,10 +8,8 @@ services:
     container_name: express_prod
     ports:
       - "3000:3000"
-    environment:
-      NODE_ENV: ${NODE_ENV}
-      DATABASE_URL: ${DATABASE_URL}
-      REDIS_URL: ${REDIS_URL}
+    env_file:
+      - .env
     depends_on:
       - db
       - redis
@@ -35,10 +33,8 @@ services:
   db:
     image: postgres:16-alpine
     container_name: postgres_prod
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
     volumes:
       - pg_prod_data:/var/lib/postgresql/data
     restart: always
