--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
     "docker:dev:build": "docker-compose -f docker-compose.dev.yml up -d --build",
     "docker:dev:restart": "docker-compose -f docker-compose.dev.yml down && docker-compose -f docker-compose.dev.yml up -d --build",
@@ -49,6 +51,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
@@ -60,7 +63,13 @@
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "globals": "^17.0.0",
     "jest": "^30.2.0",
+    "jiti": "^2.6.1",
     "nodemon": "^3.1.11",
     "pg-mem": "^3.0.5",
     "prisma": "^7.2.0",
@@ -68,6 +77,7 @@
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.0"
   }
 }
