--- a/backend/package.json
+++ b/backend/package.json
@@ -38,13 +38,18 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
+    "bullmq": "^5.66.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.9.1",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "pino": "^10.1.1",
+    "pino-pretty": "^13.1.3",
+    "prom-client": "^15.1.3",
     "redis": "^4.7.1",
     "zod": "^4.3.5"
   },
