--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -23,6 +23,11 @@
 
     COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
     COPY --from=builder /app/prisma ./prisma
+
+    RUN addgroup -g 1001 -S nodejs && \
+        adduser -S nodejs -u 1001
+
+    USER nodejs
     
     EXPOSE 3000
     
