feat(auth): enhance error handling in login process by capturing user ID and refining failure reasons; update TypeScript configuration to include type definitions

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -24,6 +24,6 @@
 
     "esModuleInterop": true
   },
-  "include": ["src", "__tests__", "tests"],
+  "include": ["src", "__tests__", "tests", "types"],
   "exclude": ["node_modules", "dist", "prisma", "*.config.ts"]
 }
