--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   api:
     env_file:
@@ -24,7 +22,6 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-      # - node_modules:/app/node_modules
     command: npm run dev
     depends_on:
       - db
@@ -34,7 +31,15 @@ services:
     image: redis:8-alpine
     ports:
       - "6379:6379"
-    command: ["redis-server", "--save", "", "--appendonly", "no"]
+    command:
+      [
+        "redis-server",
+        "--save",
+        "",
+        --requirepass anthony,
+        "--appendonly",
+        "no",
+      ]
     volumes:
       - redis_dev_data:/data
 
