--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,7 @@
     "pino-pretty": "^13.1.3",
     "prom-client": "^15.1.3",
     "redis": "^4.7.1",
+    "tslib": "^2.8.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
