--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
+    "redis": "node redis.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
@@ -24,8 +25,8 @@
     "docker:dev:restart": "docker-compose -f docker-compose.dev.yml down && docker-compose -f docker-compose.dev.yml up -d --build",
     "docker:dev:up": "docker-compose -f docker-compose.dev.yml up -d --build",
     "docker:dev:watch": "docker-compose -f docker-compose.dev.yml up --build --watch",
-    "dev:migrate": "docker-compose -f docker-compose.dev.yml exec api npx prisma migrate dev",
-    "dev:generate": "docker-compose -f docker-compose.dev.yml exec api npx prisma generate",
+    "dev:migrate": "docker-compose -f docker-compose.dev.yml exec -u 0 api npx prisma migrate dev",
+    "dev:generate": "docker-compose -f docker-compose.dev.yml exec -u 0 api npx prisma generate",
     "dev:studio": "docker-compose -f docker-compose.dev.yml exec api npx prisma studio --browser none",
     "prod:up": "docker-compose -f docker-compose.prod.yml up -d --build",
     "prod:migrate": "docker-compose -f docker-compose.prod.yml exec api npx prisma migrate deploy",
