chore(docker): consolidate Dockerfiles for development and production, update Docker Compose configurations to streamline service definitions, and enhance logging with Elasticsearch integration

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -34,7 +34,7 @@ test/
 
 # Dev-only configuration files
 nodemon.json
-scripts/
+# scripts/
 # Note: tsconfig.json and prisma.config.ts are needed for builds, so keep them
 
 # Documentation - not needed in Docker image
