--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "jest",
     "test:docker": "docker compose -f docker-compose.test.yml up -d && cross-env NODE_ENV=test npx prisma db push && cross-env NODE_ENV=test jest --runInBand && docker compose -f docker-compose.test.yml down -v",
-    "dev": "nodemon",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "redis": "node redis.js",
@@ -29,9 +29,9 @@
     "dev:generate": "docker-compose -f docker-compose.dev.yml exec -u 0 api npx prisma generate",
     "dev:studio": "docker-compose -f docker-compose.dev.yml exec api npx prisma studio --browser none",
     "prod:up": "docker-compose -f docker-compose.prod.yml up -d --build",
-    "prod:migrate": "docker-compose -f docker-compose.prod.yml exec api npx prisma migrate deploy",
-    "prisma:migrate": "docker-compose -f docker-compose.dev.yml exec api npx prisma migrate dev",
-    "prisma:generate": "docker-compose -f docker-compose.dev.yml exec api npx prisma generate",
+    "prod:restart": "docker-compose -f docker-compose.prod.yml down && docker-compose -f docker-compose.prod.yml up -d --build",
+    "prod:migrate": "docker-compose -f docker-compose.prod.yml exec -u 0 api npx prisma migrate deploy",
+    "prod:generate": "docker-compose -f docker-compose.prod.yml exec -u 0 api npx prisma generate",
     "prisma:studio": "docker-compose -f docker-compose.prod.yml exec api npx prisma studio --browser none",
     "docker:clean": "docker image prune && docker network prune && docker volume prune && docker builder prune -a",
     "docker:clean:safe": "docker image prune -f && docker network prune -f && docker builder prune -f",
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "pino": "^10.1.1",
+    "pino-elasticsearch": "^8.1.0",
     "pino-pretty": "^13.1.3",
     "prom-client": "^15.1.3",
     "redis": "^4.7.1",
