chore(docker): update Docker Compose files for development and production by removing unnecessary comments, adjusting Elasticsearch security settings, and ensuring proper configuration of Prisma files for environment variable loading

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,6 +39,8 @@ RUN npm ci --omit=dev
 # Copy built application and Prisma artifacts
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/prisma ./prisma
+COPY --from=builder /app/prisma.config.ts ./prisma.config.ts
+COPY --from=builder /app/tsconfig.json ./tsconfig.json
 COPY --from=builder /app/src/generated ./src/generated
 
 # Generate Prisma client in runtime
